Fix (CSS): Code tags display the proper color in dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -455,9 +455,9 @@ code {
 
 pre {
     padding: 0 1em;
-    border: 1px solid #ccc;
+    border: 1px solid var(--border-code-color);
     border-radius: 0.3em;
-    background: #f5f5f5;
+    background: var(--background-code-color);
 }
 pre code {
     display: block;
@@ -475,7 +475,7 @@ blockquote {
     font-style: italic;
     margin-left: 1em;
     padding-left: 1em;
-    border-left: 0.5em solid #f5f5f5;
+    border-left: 0.5em solid var(--border-code-color);
 }
 
 /*** FORMS ***/
